--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,26 @@
-html, body, button, input, select {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 14pt;
+input, select {
+    display: inline;
 }
 
-div {
-    margin: 15px 0px;
+body {
+    margin: 0 0.5rem;
+}
+
+form {
+    padding: 0.5rem;
+}
+
+button {
+    padding: 0.5rem 2rem;
+    margin-right: 1rem;
 }
 
 input[type=number] {
-    width: 70px;
+    width: 5rem;
+}
+
+div.box {
+    background-color: paleturquoise;
+    border: 1px solid grey;
+    padding: 0.5rem; 
 }
